--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint",
-    "postinstall": "tsc"
+    "postinstall": "tsc",
+    "prepare": "tsc"
   }
 }
