--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -16,15 +16,19 @@
     "eslint-plugin-unicorn": "^59.0.1"
   },
   "devDependencies": {
+    "@jlg/tsconfig": "workspace:^0.1.0",
+    "@jest/globals": "^30.0.4",
     "eslint": "^9.30.1",
+    "jest": "^30.0.4",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "eslint": "^9"
   },
   "scripts": {
-    "build": "tsc",
     "lint": "eslint",
-    "prepare": "tsc"
-  }
+    "prepare": "tsc",
+    "test": "jest"
+  },
+  "packageManager": "pnpm@10.12.3+sha512.467df2c586056165580ad6dfb54ceaad94c5a30f80893ebdec5a44c5aa73c205ae4a5bb9d5ed6bb84ea7c249ece786642bbb49d06a307df218d03da41c317417"
 }
